--- a/taller_final/formulario.html
+++ b/taller_final/formulario.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <script async src="/javascript/formulario_script.js"></script>
   <link rel="stylesheet" href="/estilos/style_formulario.css" />
-  <title>Formulario sofka</title>
+  <title>Formulario</title>
 </head>
 
 <body onload="main()">
@@ -60,7 +60,7 @@
     </div>
   </form>
   <div class="contenedor_botones">
-    <a href="/index.html" class="boton_final">
+    <a href="index.html" class="boton_final">
       <span>Página principal</span>
       <svg>
         <rect x="0" y="0" fill="none"></rect>
