--- a/taller_final/formulario.html
+++ b/taller_final/formulario.html
@@ -14,7 +14,7 @@
 <body onload="main()">
   <form class="formulario" id="formulario">
     <div class="container">
-      <h1>Formulario sofka</h1>
+      <h1>Formulario</h1>
       <ul>
         <li>
           <div class="grid grid-2 nombre">
