--- a/taller_final/formulario.html
+++ b/taller_final/formulario.html
@@ -60,7 +60,7 @@
     </div>
   </form>
   <div class="contenedor_botones">
-    <a href="index.html" class="boton_final">
+    <a href="/index.html" class="boton_final">
       <span>Página principal</span>
       <svg>
         <rect x="0" y="0" fill="none"></rect>
